unpackaged/main/default/objects/List_Price__c/List_Price__c.object-meta.xml
<CustomObject>
    <label>List Price</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>