unpackaged/main/default/objects/List_Price__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prologantion</label>
    <type>Checkbox</type>
</CustomField>