unpackaged/main/default/objects/List_Price__c/fields/Franchise_1__c.field-meta.xml
<CustomField>
    <fullName>Franchise_1__c</fullName>
    <label>Franchise 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>