unpackaged/main/default/objects/List_Price__c/fields/Franchise_2__c.field-meta.xml
<CustomField>
    <fullName>Franchise_2__c</fullName>
    <label>Franchise 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>