unpackaged/main/default/objects/List_Price__c/fields/Gamme__c.field-meta.xml
<CustomField>
    <fullName>Gamme__c</fullName>
    <label>Gamme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>