unpackaged/main/default/objects/List_Price__c/fields/Parent_Product_Empty__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Empty__c</fullName>
    <formula>IF(
				Isblank( Parent_Product__c ),
				true,
				false
				)</formula>
    <label>Produit parent vide</label>
    <type>Checkbox</type>
</CustomField>