unpackaged/main/default/objects/List_Price__c/fields/UpperBound__c.field-meta.xml
<CustomField>
    <fullName>UpperBound__c</fullName>
    <label>UpperBound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>