unpackaged/main/default/objects/List_Price__c/recordTypes/Container.recordType-meta.xml
<RecordType>
    <fullName>Container</fullName>
    <active>true</active>
    <label>Container</label>
</RecordType>