unpackaged/main/default/objects/List_Price__c/listViews/List_Price_Container.listView-meta.xml
<ListView>
    <fullName>List_Price_Container</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>List_Price__c.Container</value>
    </filters>
    <label>List Price Container</label>
</ListView>