unpackaged/main/default/objects/List_Price__c/listViews/List_Price_Vehicules_CD_MD.listView-meta.xml
<ListView>
    <fullName>List_Price_Vehicules_CD_MD</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Pays__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>0123G000002Ukbg</value>
    </filters>
    <label>List Price Vehicules CD/MD</label>
</ListView>